# infinite-realms-clean

./: .env.example  .gitignore  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  README.md  pyproject.toml
campaign-ideas/: README.md  all-npcs.md  audit-campaigns.sh  campaign-audit.csv  extract-npcs.sh  launch-picker.md  move-completed.sh  organize-campaigns.sh  organize-log.txt  pick-launch-campaigns.sh  search-campaigns.sh  stats.sh  validate-campaigns.sh  validation-report.md
campaign-ideas/a-midsummer-nights-chaos/: a-midsummer-nights-chaos-campaign-bible.md  creative-brief.md
campaign-ideas/above-the-cloudline/: creative-brief.md
campaign-ideas/abyssal-descent/: abyssal-descent-campaign-bible.md  creative-brief.md
campaign-ideas/academy-of-arcane-gastronomy/: world-building-spec.md
campaign-ideas/academy-of-legends/: academy-of-legends-campaign-bible.md  academy-of-legends.md  creative-brief.md  world-building-spec.md
campaign-ideas/agents-of-concordia/: agents-of-concordia.md  creative-brief.md  world-building-spec.md
campaign-ideas/agents-of-the-concordat/: creative-brief.md  world-building-spec.md
campaign-ideas/alchemical-insurgence/: alchemical-insurgence.md  creative-brief.md  world-building-spec.md
campaign-ideas/all-for-one/: all-for-one.md  creative-brief.md  world-building-spec.md
campaign-ideas/all-that-jazz/: all-that-jazz.md  (+1 more)
docs/: architecture.md  best_practices.md  model_configuration.md  quick_start.md
examples/: clockwork_city.yaml  minimal_example.yaml  seas_of_destiny.yaml  shadow_empire.yaml
src/: __init__.py  main.py
(+2384 files in other folders)
